--- a/src/com.nicholasyager.dbt-streamdeck.sdPlugin/manifest.json
+++ b/src/com.nicholasyager.dbt-streamdeck.sdPlugin/manifest.json
@@ -1,77 +1,63 @@
 {
-	"SDKVersion": 2,
-	"Author": "Elgato Systems",
-	"CodePath": "app.html",
-	"Description": "Example description",
-	"Name": "Stream Deck Template",
-	"Icon": "actions/template/assets/action",
-	"URL": "https://www.elgato.com/en/gaming/stream-deck",
-	"Version": "1.0.2",
-	"Software": {
-		"MinimumVersion": "5.0"
-	},
-	"OS": [
-		{
-			"Platform": "mac",
-			"MinimumVersion": "10.11"
-		},
-		{
-			"Platform": "windows",
-			"MinimumVersion": "10"
-		}
-	],
-	"Category": "Template Plugin",
-	"CategoryIcon": "actions/template/assets/actionimage",
-	"Actions": [
-		{
-			"Icon": "actions/template/assets/actionimage",
-			"Name": "Model Overview",
-			"Controllers": [
-				"Keypad",
-				"Encoder"
-			],
-			"Encoder": {
-				"layout": "$B1",
-				"TriggerDescription": {
-					"Rotate": "Describe the rotation",
-					"Push": "Describe the encoder push",
-					"Touch": "Describe the touch",
-					"LongTouch": "Describe the long touch"
-				}
-			},
-			"States": [
-				{
-					"Image": "actions/template/assets/action"
-				}
-			],
-			"Tooltip": "This is an example tooltip",
-			"UUID": "com.nicholasyager.dbt-streamdeck.overview",
-			"PropertyInspectorPath": "actions/overview/configuration/configuration.html"
-		},
-		{
-			"Icon": "actions/template/assets/actionimage",
-			"Name": "Example Action",
-			"Controllers": [
-				"Keypad",
-				"Encoder"
-			],
-			"Encoder": {
-				"layout": "$B1",
-				"TriggerDescription": {
-					"Rotate": "Describe the rotation",
-					"Push": "Describe the encoder push",
-					"Touch": "Describe the touch",
-					"LongTouch": "Describe the long touch"
-				}
-			},
-			"States": [
-				{
-					"Image": "actions/template/assets/action"
-				}
-			],
-			"Tooltip": "This is an example tooltip",
-			"UUID": "com.nicholasyager.dbt-streamdeck.action",
-			"PropertyInspectorPath": "actions/template/property-inspector/inspector.html"
-		}
-	]
+  "SDKVersion": 2,
+  "Author": "Elgato Systems",
+  "CodePath": "app.html",
+  "Description": "dbt Cloud monitoring on your Stream Deck",
+  "Name": "dbt-streemdeck",
+  "Icon": "actions/template/assets/action",
+  "URL": "https://www.elgato.com/en/gaming/stream-deck",
+  "Version": "1.0.2",
+  "Software": {
+    "MinimumVersion": "5.0"
+  },
+  "OS": [
+    {
+      "Platform": "mac",
+      "MinimumVersion": "10.11"
+    },
+    {
+      "Platform": "windows",
+      "MinimumVersion": "10"
+    }
+  ],
+  "Category": "db Cloud",
+  "CategoryIcon": "actions/template/assets/actionimage",
+  "Actions": [
+    {
+      "Icon": "actions/template/assets/actionimage",
+      "Name": "Monitor Model",
+      "Controllers": ["Keypad"],
+
+      "States": [
+        {
+          "Image": "actions/template/assets/action"
+        }
+      ],
+      "Tooltip": "Monitor a model's status",
+      "UUID": "com.nicholasyager.dbt-streamdeck.model",
+      "PropertyInspectorPath": "actions/model/configuration/configuration.html"
+    },
+    {
+      "Icon": "actions/template/assets/actionimage",
+      "Name": "Example Action",
+      "Controllers": ["Keypad", "Encoder"],
+      "Encoder": {
+        "layout": "$B1",
+        "TriggerDescription": {
+          "Rotate": "Describe the rotation",
+          "Push": "Describe the encoder push",
+          "Touch": "Describe the touch",
+          "LongTouch": "Describe the long touch"
+        }
+      },
+      "States": [
+        {
+          "Image": "actions/template/assets/action"
+        }
+      ],
+      "Tooltip": "This is an example tooltip",
+      "UUID": "com.nicholasyager.dbt-streamdeck.action",
+      "PropertyInspectorPath": "actions/template/property-inspector/inspector.html"
+    }
+  ]
 }
