--- a/src/com.nicholasyager.dbt-streamdeck.sdPlugin/manifest.json
+++ b/src/com.nicholasyager.dbt-streamdeck.sdPlugin/manifest.json
@@ -20,7 +20,7 @@
       "MinimumVersion": "10"
     }
   ],
-  "Category": "db Cloud",
+  "Category": "dbt-streamdeck",
   "CategoryIcon": "actions/template/assets/actionimage",
   "Actions": [
     {
@@ -39,25 +39,17 @@
     },
     {
       "Icon": "actions/template/assets/actionimage",
-      "Name": "Example Action",
-      "Controllers": ["Keypad", "Encoder"],
-      "Encoder": {
-        "layout": "$B1",
-        "TriggerDescription": {
-          "Rotate": "Describe the rotation",
-          "Push": "Describe the encoder push",
-          "Touch": "Describe the touch",
-          "LongTouch": "Describe the long touch"
-        }
-      },
+      "Name": "Monitor Job",
+      "Controllers": ["Keypad"],
+
       "States": [
         {
           "Image": "actions/template/assets/action"
         }
       ],
-      "Tooltip": "This is an example tooltip",
-      "UUID": "com.nicholasyager.dbt-streamdeck.action",
-      "PropertyInspectorPath": "actions/template/property-inspector/inspector.html"
+      "Tooltip": "Monitor a dbt Cloud job's status",
+      "UUID": "com.nicholasyager.dbt-streamdeck.job",
+      "PropertyInspectorPath": "actions/job/configuration/configuration.html"
     }
   ]
 }
